--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       <section class="container nav__container">
         <h2 class="nav__title">Resumo Financeiro</h2>
         <nav class="nav__filter">
-          <input class="radio__btn radio__btn-1" value="all" type="radio" id="all" name="filter" checked>
+          <input class="nav__radio radio__btn radio__btn-1" value="all" type="radio" id="all" name="filter" checked>
           <label class="nav__label nav__label-1" for="all" value="all">Todos</label>
 
-          <input class="radio__btn radio__btn-2" value="entry" type="radio" id="entry" name="filter">
+          <input class="nav__radio radio__btn radio__btn-2" value="entry" type="radio" id="entry" name="filter">
           <label class="nav__label nav__label-2" for="entry" >Entradas</label>
 
-          <input class="radio__btn radio__btn-3" value="outflow" type="radio" id="outflow" name="filter">
+          <input class="nav__radio radio__btn radio__btn-3" value="outflow" type="radio" id="outflow" name="filter">
           <label class="nav__label nav__label-3" for="outflow">Saída</label>
         </nav>
         <div class="nav__total">
@@ -79,7 +79,7 @@
             <input name="valor" type="number" class="register__input">
           </div>
           <div class="register__div">
-            <input class="register__input register__radio register__radio-btn1" type="radio" name="type" id="register__entry">
+            <input class="register__input register__radio register__radio-btn1" type="radio" name="type" id="register__entry" checked>
             <label for="register__entry" class="register__entry register__radio-1">Entrada</label>
             
             <input class="register__input register__radio register__radio-btn2" type="radio" name="type" id="register__out">
