fidelidade ao figma aumentado e correção do bug de qualquer valor poder ser digitado

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <form class="register__form">
           <div class="register__div">
             <label class="register__title" for="valor">Valor</label>
-            <input name="valor" type="number" class="register__input">
+            <input name="valor" type="number" class="register__input" required>
           </div>
           <div class="register__div register__div-radio">
             <h3 class="register__title">Tipo de valor</h3>
